Change z-index in FixedHeader (#2334)

--- a/src/ui/units/dash/containers/FixedHeader/FixedHeader.scss
+++ b/src/ui/units/dash/containers/FixedHeader/FixedHeader.scss
@@ -82,7 +82,7 @@
             position: fixed;
             top: 40px;
 
-            z-index: 10;
+            z-index: 8;
 
             display: flex;
             flex-direction: row;
@@ -109,7 +109,7 @@
     }
 
     &__controls-settings {
-        z-index: 11;
+        z-index: 9;
         width: 36px;
         position: absolute;
         right: calc(-1 * var(--btn-click-scale-compensantion));
